Module1/hello-openshift.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-openshift
  labels:
    app: hello-openshift
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-openshift
  template:
    metadata:
      labels:
        app: hello-openshift
    spec:
      containers:
        - name: web
          image: quay.io/redhat-developer/hello-openshift:latest
          ports:
            - containerPort: 8080
