Module1/service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-openshift
spec:
  selector:
    app: hello-openshift
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-openshift
spec:
  to:
    kind: Service
    name: hello-openshift
  port:
    targetPort: 80
  tls:
    termination: edge
